Fixed paths and code after deployment + enabled line breaks in body content

--- a/css/home.css
+++ b/css/home.css
@@ -133,10 +133,6 @@
 }
 
 .blog-name-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin: 0 var(--margin-mobile);
 }
 
